tests/NormalTests/paczka1/fuzzy1/83345262.err
Error in line 11: S203 S156 101,0
Error in line 13: S203 S203 36,8
Error in line 12: 9ykkT47y63 S203 20,9
Error in line 32: nvgaV S984 60,4
Error in line 36: nvgaV S408 67,2
